# FullControlX

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_and_run.sh  main.c  main.m  watch_and_build.sh
fcx-web/: .formatter.exs  .gitignore  README.md  mix.exs  tailwind-watcher.sh
fcx-web/assets/css/: app.css
fcx-web/assets/js/: app.js  fullcontrolx.js
fcx-web/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
fcx-web/lib/: fullcontrol_x.ex  fullcontrol_x_web.ex
fcx-web/lib/fullcontrol_x/: application.ex  driver.ex  repo.ex  trackpad_driver.ex
fcx-web/lib/fullcontrol_x_web/: commands_live.ex  components.ex  endpoint.ex  gettext.ex  info_live.ex  keyboard_live.ex  main_live.ex  router.ex  telemetry.ex  tools_live.ex  trackpad_live.ex
fcx-web/lib/fullcontrol_x_web/templates/layout/: live.html.heex  root.html.heex
fcx-web/lib/fullcontrol_x_web/views/: error_helpers.ex  error_view.ex  layout_view.ex  page_view.ex
fcx-web/priv/repo/: seeds.exs
fcx-web/test/: test_helper.exs
fcx-web/test/fullcontrol_x/: trackpad_driver_test.exs
fcx-web/test/fullcontrol_x_web/controllers/: page_controller_test.exs
fcx-web/test/fullcontrol_x_web/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
fcx-web/test/support/: conn_case.ex  data_case.ex
fcxd/: .clangd  .gitignore  CMakeLists.txt  README.md  build.sh  build.zig  build.zig.zon  build_and_test.sh  test.sh
fcxd/src/: fcx_app.c  fcx_app.h  fcx_apps.h  fcx_io_interface.c  fcx_io_interface.h  fcx_keyboard.h  fcx_mouse.h  fcx_request_handler.c  fcx_request_handler.h  fcx_socket.c  fcx_socket.h  fcx_socket.zig  fullcontrol_x_config.h.in  logger.c  logger.h  main.c  main.m  request_handler.c  request_handler.h  stream_parser.h
fcxd/src/linux/: fcx_apps.c  fcx_keyboard.c  fcx_keyboard_map.c  fcx_mouse.c  fcx_system.c
fcxd/src/mac/: fcx_apps.m  fcx_io_hid.c  fcx_io_hid.h  fcx_keyboard.c  fcx_keyboard_symbols_map.c  fcx_keyboard_symbols_map.h  fcx_mouse.c  main.m
fcxd/src/windows/: fcx_apps.c  fcx_keyboard.c  fcx_mouse.c  fcx_system.c
fcxd/test/: mouse.c  test.input
src/: fcx_apps.m  fcx_system.h  fcx_system.m  main.c  main.m  request_handler.c  stream_parser.c
src/mac/: fcx_apps.m  fcx_system.m
test/: test.input
windows/FullControlX/: CMakeLists.txt  FullControlX.c  FullControlX.h  MainWindow.c  MainWindow.h  NotifyIcon.c  NotifyIcon.h  Resorces.rc  Resorces.rct  resource.h
xcode/: README.md
xcode/FullControlX/: AppDelegate.swift
xcode/FullControlX.xcodeproj/: project.pbxproj
xcode/FullControlX.xcodeproj/project.xcworkspace/xcuserdata/cescobaz.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/FullControlX.xcodeproj/xcuserdata/cescobaz.xcuserdatad/xcschemes/: xcschememanagement.plist
xcode/FullControlX/Assets.xcassets/AppIcon.appiconset/: Contents.json
xcode/FullControlX/Base.lproj/: MainMenu.xib
